Fix: checkbox visibility.
Problem can be seen on the search results page.

--- a/assets/css/scss/components/_forms.scss
+++ b/assets/css/scss/components/_forms.scss
@@ -2,7 +2,3 @@
 .form-control {
   border-radius: .25rem !important;
 }
-
-body:not(.wp-admin):not(.search-results) input[type="checkbox"] {
-  opacity: 1;
-}
